# keyleak-detector

./: .dockerignore  .gitignore  CHANGELOG.md  CNAME  CONTRIBUTING.md  DISCLAIMER.md  DOCKER.md  Dockerfile  LICENSE  README.md  action.yml  app.py  attack_vector_scanner.py  compose.yml  custom_image_view.py  custom_views.py  feed.xml  imghdr.py  index.html  llms-full.txt  llms.txt  patch_mitmproxy.py  pattern_importer.py  privacy.html  pyproject.toml  report.html  requirements.txt  robots.txt  sitemap.xml
.claude/skills/keyleak-verify/: SKILL.md
.codex/skills/keyleak-audit/: SKILL.md
.github/: pull_request_template.md  secret_scanning.yml
.github/ISSUE_TEMPLATE/: config.yml  detector.yml  fixture.yml
.github/workflows/: ci.yml  publish.yml
blog/: baas-security-risks-vibecoded-apps.html  index.html  why-runtime-secret-scanning-matters.html
docs/: AGENT_SCAN_HOWTO.md  DETECTOR_AUTHORING.md  SECURITY_MODEL.md  github-action.md
docs/audit/: AUDIT-MATRIX.md  IMPLEMENTATION-PLAN.md
docs/audit/raw/: 01-detector-engine.md  02-active-probing-safety.md  03-orchestration-reporting.md  04-cli-ux-extension.md  05-tests-quality-ci.md  06-sixmonth-gap-analysis.md
docs/audit/reviews/: REVIEW-LOG.md
docs/vuln-research/: PROGRAM.md
docs/vuln-research/catalog/: CATALOG-raw.md  RANKED.md  catalog-detector-mapping.md  compact.json  flat-raw.json  master.json  normalized.json  p3-result.json  raw.json
docs/vuln-research/catalog/slices/: angular-vue.json  api-rest.json  aspnet.json  authn-authz.json  baas-graphql.json  client-browser.json  django-drf.json  ethical-recon.json  fastapi.json  flask.json  go-web.json  injection-fuzz.json  java-spring.json  laravel-php.json  nextjs.json  node-express.json  rails.json  react-spa.json
docs/vuln-research/design/: architecture-map.md  correlation-engine.md  integration-plan.md  scan-bundles.md  supabase-rls-deepdive.md
docs/vuln-research/reviews/: REVIEW-LOG.md  r1-result.json  r2-result.json
extension/: PRIVACY_POLICY.md  content-script.js  injector.js  manifest.json  service-worker.js
extension/devtools/: devtools.js  panel.html  panel.js
extension/lib/: analyzer.js  baas-detector.js  detector-info.js  false-positives.js  key-tester.js  learn-panel.js  library-cves.js  patterns.js  reference-view.js  reporting.js  url-guard.js
extension/popup/: popup.html  popup.js
extension/tests/: analyzer.test.js  baas-detector.test.js  library-cves.test.js  pii-scrub.test.js  url-guard.test.js
fixtures/vulnerable-demo/: .env.leaky  app.js.map  index.html
keyleak/: __init__.py  access_control.py  allowlist_diff.py  archive_scanner.py  attack_chains.py  audit.py  baas_validator.py  blast_radius.py  browser_scanner.py  bundles.py  chain_of_custody.py  cli.py  demo.py  detectors.py  detectors_ast.py  detectors_dynamic.py  detectors_fuzzy.py  detectors_splittoken.py  diff.py  disclose.py  doctor.py  extension_bundle.py  feeds.py  fingerprints.py  js_library_cves.py  lifecycle_audit.py  local_scanner.py  models.py  net_guard.py  offline_guard.py  privacy_filter.py  proxy.py  redaction.py  reporting.py  self_audit.py  site_scanner.py  sourcemaps.py  subdomain_takeover.py  suppressions.py  watch.py
static/css/: main.css
static/js/: main.js
templates/: index.html
tests/: __init__.py  test_attack_chains.py  test_audit.py  test_baas_validator.py  test_browser_cdp_capture.py  test_browser_library_scan.py  test_browser_redaction.py  test_bundles.py  test_cli_bundles.py  test_core_reporting.py  test_dangerous_url_params.py  test_dotnet_conn_string.py  test_extension_library_cves_sync.py  test_gh_actions_detectors.py  test_js_library_cves.py  test_lifecycle_audit.py  test_net_guard.py  test_privacy_filter.py  test_proxy.py  test_site_scanner.py  test_site_scanner_ssrf.py  test_subdomain_takeover.py
