[tool.poetry]
name = "keyleak-detector"
version = "0.5.0"
description = "Runtime leak detector for modern web apps — finds exposed API keys, BaaS misconfigurations (Supabase/Firebase RLS), and secrets in JS bundles, with a Chrome extension for real-time detection."
authors = ["Amal David <amal@utopianlabs.co>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
Flask = "2.2.5"
requests = "2.32.5"
beautifulsoup4 = "4.12.2"
python-dotenv = "1.0.0"
regex = "2023.10.3"
mitmproxy = "9.0.1"
playwright = "1.55.0"
PyJWT = "2.10.1"
tldextract = "5.1.2"
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
# Add dev dependencies here if needed

[tool.poetry.scripts]
keyleak = "keyleak.cli:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
