[tool.poetry]
name = "keyleak-detector"
version = "0.5.1"
description = "Runtime leak detector for modern web apps — finds exposed API keys, BaaS misconfigurations (Supabase/Firebase RLS), and secrets in JS bundles, with a Chrome extension for real-time detection."
authors = ["Amal David <amal@utopianlabs.co>"]
license = "MIT"
readme = "README.md"
packages = [{include = "keyleak"}]
keywords = ["security", "api-keys", "secrets", "supabase", "firebase", "baas", "vulnerability-scanner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[tool.poetry.urls]
"Homepage" = "https://github.com/Amal-David/keyleak-detector"
"Bug Tracker" = "https://github.com/Amal-David/keyleak-detector/issues"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
Flask = "2.2.5"
requests = "2.32.5"
beautifulsoup4 = "4.12.2"
python-dotenv = "1.0.0"
regex = "2023.10.3"
mitmproxy = "9.0.1"
playwright = "1.55.0"
PyJWT = "2.10.1"
tldextract = "5.1.2"
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
# Add dev dependencies here if needed

[tool.poetry.scripts]
keyleak = "keyleak.cli:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

# PEP 621 project table for uv / pip compatibility
[project]
name = "keyleak-detector"
version = "0.5.1"
description = "Runtime leak detector for modern web apps — finds exposed API keys, BaaS misconfigurations (Supabase/Firebase RLS), and secrets in JS bundles."
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Amal David", email = "amal@utopianlabs.co"}]
keywords = ["security", "api-keys", "secrets", "supabase", "firebase", "baas", "vulnerability-scanner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/Amal-David/keyleak-detector"
Issues = "https://github.com/Amal-David/keyleak-detector/issues"

[project.scripts]
keyleak = "keyleak.cli:main"
