[tool.poetry]
name = "keyleak-detector"
version = "0.5.2"
description = "Runtime leak detector for modern web apps — finds exposed API keys, BaaS misconfigurations (Supabase/Firebase RLS), and secrets in JS bundles, with a Chrome extension for real-time detection."
authors = ["Amal David <amal@utopianlabs.co>"]
license = "MIT"
readme = "README.md"
packages = [{include = "keyleak"}]
keywords = ["security", "api-keys", "secrets", "supabase", "firebase", "baas", "vulnerability-scanner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[tool.poetry.urls]
"Homepage" = "https://github.com/Amal-David/keyleak-detector"
"Bug Tracker" = "https://github.com/Amal-David/keyleak-detector/issues"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
Flask = "3.1.3"
requests = "2.33.0"
beautifulsoup4 = "4.12.2"
python-dotenv = "1.2.2"
regex = "2023.10.3"
mitmproxy = "12.2.3"
playwright = "1.55.0"
PyJWT = "2.12.0"
tldextract = "5.1.2"
PyYAML = "6.0.2"
PySocks = "1.7.1"

[tool.poetry.group.dev.dependencies]
# Add dev dependencies here if needed

[tool.poetry.scripts]
keyleak = "keyleak.cli:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

# PEP 621 project table for uv / pip compatibility
[project]
name = "keyleak-detector"
version = "0.5.2"
description = "Runtime leak detector for modern web apps — finds exposed API keys, BaaS misconfigurations (Supabase/Firebase RLS), and secrets in JS bundles."
requires-python = ">=3.12,<4.0"
license = {text = "MIT"}
authors = [{name = "Amal David", email = "amal@utopianlabs.co"}]
keywords = ["security", "api-keys", "secrets", "supabase", "firebase", "baas", "vulnerability-scanner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/Amal-David/keyleak-detector"
Issues = "https://github.com/Amal-David/keyleak-detector/issues"

[project.scripts]
keyleak = "keyleak.cli:main"
